--- a/docker-compose.wasmedge-container.yml
+++ b/docker-compose.wasmedge-container.yml
@@ -3,20 +3,7 @@ services:
   mysql:
     image: mysql:5.7
     container_name: mysql
-    command: 
-      --server-id=1
-      --log-bin=mysql-bin
-      --max-binlog-size=4096
-      --binlog-format=MIXED
-      --sync-binlog=1
-      --log-slave-updates=ON
-      --gtid-mode=ON
-      --enforce-gtid-consistency=ON
-      --character-set-server=utf8mb4
-      --collation-server=utf8mb4_unicode_ci
-      --max-connections=1000
-      --read-only=OFF
-      --binlog-rows-query-log-events=ON
+    command: --server-id=1 --log-bin=mysql-bin --max-binlog-size=4096 --binlog-format=MIXED --sync-binlog=1 --log-slave-updates=ON --gtid-mode=ON --enforce-gtid-consistency=ON --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=1000 --read-only=OFF --binlog-rows-query-log-events=ON
     ports:
       - 3306:3306
     environment:
@@ -34,8 +21,7 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_LISTENERS: LISTENER_INTERNAL://kafka:29090,LISTENER_EXTERNAL://localhost:9090
-        # KAFKA_ADVERTISED_HOST_NAME: localhost 
+      KAFKA_LISTENERS: LISTENER_INTERNAL://kafka:29090,LISTENER_EXTERNAL://localhost:9090 # KAFKA_ADVERTISED_HOST_NAME: localhost 
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_INTERNAL
@@ -43,14 +29,14 @@ services:
 
   wasmedge_binlog_kafka:
     container_name: "wasmedge_binlog_kafka"
-    image: hrushi20/mysql-binlog-kafka 
+    image: mysql-binlog-kafka:latest
     platform: wasi/wasm
     build:
       context: .
     environment:
-      SQL_USERNAME: root 
-      SQL_PASSWORD: password 
-      SQL_PORT: 3306 
+      SQL_USERNAME: root
+      SQL_PASSWORD: password
+      SQL_PORT: 3306
       SQL_HOSTNAME: "mysql"
       SQL_DATABASE: "mysql"
       KAFKA_URL: "kafka:29090"
