--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,7 @@ services:
   mysql5.7:
     image: mysql:5.7
     container_name: mysql5.7
-    command: 
-      --server-id=1
-      --log-bin=mysql-bin
-      --max-binlog-size=4096
-      --binlog-format=MIXED
-      --sync-binlog=1
-      --log-slave-updates=ON
-      --gtid-mode=ON
-      --enforce-gtid-consistency=ON
-      --character-set-server=utf8mb4
-      --collation-server=utf8mb4_unicode_ci
-      --max-connections=1000
-      --read-only=OFF
-      --binlog-rows-query-log-events=ON
+    command: --server-id=1 --log-bin=mysql-bin --max-binlog-size=4096 --binlog-format=MIXED --sync-binlog=1 --log-slave-updates=ON --gtid-mode=ON --enforce-gtid-consistency=ON --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=1000 --read-only=OFF --binlog-rows-query-log-events=ON
     ports:
       - 3306:3306
     environment:
