--- a/mysql-binlog-kafka/Cargo.toml
+++ b/mysql-binlog-kafka/Cargo.toml
@@ -5,9 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "insert_tables"
+path = "src/sql-commands-test-rust/insert_tables.rs"
+
 [dependencies]
 chrono = "0.4.24"
 mysql_cdc = { path="../mysql_cdc" }
+mysql_wasi = "23.0.1"
 rskafka_wasi = "0.3.1"
 serde_json = "1.0.95"
+sqlparser = "0.34.0"
 tokio_wasi = {version = '1.21', features = ["rt", "macros"]}
