--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,5 +45,8 @@ jobs:
       - name: Run tests
         run: |
           cd mysql-binlog-kafka
-          wasmedge --env "DATABASE_URL=mysql://root:password@127.0.0.1:3306/mysql" sql-commands-test-wasm/insert.wasm
-          cat out.log | grep "INSERT INTO payment (customer_id, amount, account_name)" && echo "Query executed successfully" || exit 1
+          wasmedge --env "DATABASE_URL=mysql://root:password@127.0.0.1:3306/mysql" sql-commands-test-wasm/insert_tables.wasm
+          sleep 10
+          cat out.log | grep "Event from kafka topic mysql_paymentA" && echo "Query executed successfully" || exit 1
+          cat out.log | grep "Event from kafka topic mysql_paymentB" && echo "Query executed successfully" || exit 1
+          cat out.log | grep "Event from kafka topic mysql_paymentC" && echo "Query executed successfully" || exit 1
